@@ -1,3 +1,6 @@
+2012-09-06 Tsi YANG <tsi@in-cite.net>
+	* Fix: Retrieved licence's label.	
+
 2012-08-10 Tsi YANG <tsi@in-cite.net>
 	* Feature: Added tiers restriction.
 	* Fix: Files error validated infos.
